--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,9 @@
-<h1>Contact Details</h1>
-<p>Tel: +916307112622</p>
-<p>Email: maahiverma2006@gmail.com</p>
-<p>Address: behind sumitra lodge near shagun ata chakki</p>
+<h1>Contact Me</h1>
+<p>Tel: +123456789</p>
+<p>Email: me@gmail.com</p>
+<p>Address:</p>
 <p>
-  nawabganj<br />
-  barabanki<br />
- india <br />
+  123 North Street<br />
+  Some City<br />
+  Some Country <br />
 </p>
